Add margin to the info-container by 15px. Added To Dos to the front-end.

--- a/assets/css/lionblock.css
+++ b/assets/css/lionblock.css
@@ -69,6 +69,10 @@ h2 {
 .main-container {
   height: 20%;
 }
+
+.info-container {
+  margin: 15px;
+}
 .option-container {
   display:block;
   overflow: hidden;
