--- a/assets/css/lionblock.css
+++ b/assets/css/lionblock.css
@@ -38,12 +38,17 @@ li {
 
 }
 
-h1, h2, h4, h5 , h6 {
+h1  {
+color: #efefef;
+}
+
+h2, h4, h5 , h6 {
   color:  #8d8d8d;
 
 }
 
 p {
+  font-size: 11px;
   color: #616161;
 }
 /* This is for the Statistics Label */
@@ -55,6 +60,7 @@ p {
   margin-top: 2px;
   margin-bottom: 5px;
   font-size: 30px;
+  background-color: #373737;
 }
 .brand img{
   max-height: 80px;
@@ -63,10 +69,12 @@ p {
   height: auto;
 }
 
+
 .header {
     background-color: #373737;
     width: 100%;
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 5px;
     text-align: center;
 }
 
@@ -100,11 +108,11 @@ h3 {
   .toggle.ios .toggle-handle { border-radius: 20px; }
 
 .main-container {
+
   height: 25%;
 }
 
 .info-container {
-  margin: 15px;
   height: 25%;
 }
 
@@ -145,6 +153,7 @@ h3 {
 .glyphicon {
   font-size: 19px;
   max-height: 10%;
+  padding-top: 5px;
 }
 
 .carousel-control.left {
@@ -156,6 +165,7 @@ h3 {
 }
 
 .infoText {
+  margin-top: 4px; 
   text-align: justify;
 
 }
@@ -208,4 +218,8 @@ h3 {
 .statistic-title {
   text-align: center;
   margin: 0px;
+}
+
+.team-title {
+  text-align: left;
 }
